2010-04-18 Thunor <thunorsif_at_hotmail.com>
* Excluding the configurator, both runtime options pages are now fully
  functional and navigable using the keyboard (cursors and enter),
  mouse or joystick. The control remappings have been significantly
  updated and so any existing rcfile will have to be deleted; later
  I'll check for an old rcfile in code and ignore it.

2010-04-17 Thunor <thunorsif_at_hotmail.com>
* Added a message box manager which is currently used when saving from
  runopts or changing the volume (default -/= or use mouse in runopts).

2010-04-16 Thunor <thunorsif_at_hotmail.com>
* Runtime options now works i.e. the changes are saved or discarded.
  The joystick configurator and selector navigation will be implemented
  later when I'm happy with the layout and scalability looks good.

2010-04-15 Thunor <thunorsif_at_hotmail.com>
* Optimised vkeyb drawing: when alpha is 0 it's no longer rendered.

2010-04-14 Thunor <thunorsif_at_hotmail.com>
* Re-engineered the way the runtime options are set-up so that it's
  easier to modify. The hotspots though remain manually configured.
* The vkeyb state is now restored after accessing runtime options.
* Added key repeat delay and interval to the rcfile.
* Added sound volume to the rcfile.
* Added a runtime options icon to the control bar.
* Reorganised runtime option locations across pages.

2010-04-13 Thunor <thunorsif_at_hotmail.com>
* Added fg/bg colour adjustment to the runtime options.
* Fixed a bug in BMF_RenderText: the new fg_colour wasn't being stored.
* BMF_RenderText will now reuse the least requested slot if necessary.

2010-04-12 Thunor <thunorsif_at_hotmail.com>
* Added joystick dead zone adjustment to the runtime options.
* Added volume control adjustment to the runtime options.
* Added key repeat delay/interval adjustment to the runtime options.

2010-03-31 Thunor <thunorsif_at_hotmail.com>
* Replaced the OSS (Open Sound System) API with the portable SDL API.
